SERVER-54809 Refine CSRS command must acquire the DistLock if received from a router